# rapid-sports

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/nfl/: get_teams_response.json  player_Info.json  player_Stats.json  team_Info.json  team_Players.json  team_Stats.json
logs/: sports_odds.json
src/rapid/nfl/: __init__.py  api.py
src/rapid/odds/: __init__.py  api.py
tests/: test_nfl_get_teams.py
tests/nfl/: __init__.py  test_get_game_boxscore_by_id.py  test_get_game_by_id.py  test_get_game_play_by_play_by_id.py  test_get_games_by_season_week.py  test_get_games_by_year.py  test_get_player_info_by_id.py  test_get_player_news_by_id.py  test_get_player_notes_by_id.py  test_get_player_stats_by_id.py  test_get_team_by_id.py  test_get_team_players_by_id.py  test_get_team_stats_by_id.py  test_nfl_get_teams.py
tests/odds/: test_get_arbitrage_opportunities.py  test_get_odds_by_sport.py  test_get_sports.py
